# Geant4_Simulations

./: README.md
CLYC_Gamma_Detector/CLYC_Gamma_Detector/: ActionInitialization.hh  CMakeLists.txt  Event.cc  Event.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  Stepping.cc  Stepping.hh  gps.mac  physics.hh  run.cc  sim.cc
CLYC_Gamma_Detector/CLYC_Gamma_Detector/root file/: 3.5MeV.root  5Mev.root  662keV.root  6MeV.root  Cylinder_5MeV.root  Gauss_20cm.root
CLYC_Gamma_Detector/CLYC_Gamma_Detector/unused/: MyAnalysis.cc  MyAnalysis.hh  PrimaryGeneratorAction.cc  RunAction.cc  RunAction.hh  sensitiveDetector.cc
CLYC_Neutron_Detector_no res/CLYC_Neutron_Detector_no res/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction.hh  Event.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  Stepping.cc  physics.cc  run.hh  sim.cc
CLYC_Neutron_Detector_no res/CLYC_Neutron_Detector_no res/root file/Neutron/0.4eV/: QGSP_BERT_HP.root  Shielding.root
CLYC_Neutron_Detector_no res/CLYC_Neutron_Detector_no res/root file/Neutron/100ev/: QGSP_BERT_HP.root
CLYC_Neutron_Detector_no res/CLYC_Neutron_Detector_no res/root file/Neutron/100keV'/: QGSP_BERT_HP.root
CLYC_Neutron_Detector_no res/CLYC_Neutron_Detector_no res/root file/Neutron/10eV/: QGSP_BERT_HP.root  Shielding.root
CLYC_Neutron_Detector_no res/CLYC_Neutron_Detector_no res/root file/Neutron/10keV/: QGSP_BERT_HP.root
CLYC_Neutron_Detector_no res/CLYC_Neutron_Detector_no res/unused/: most_baic_detector.txt  scoring.mac  sensitiveDetector.hh
(+20 files in other folders)
